# ETC1-Compression

./: README.txt  prepare_test.sh  run_test.sh
constantin.andreescu/: CMakeLists.txt  compress.cl  texture_compress_skl.cpp
cpu_etc/: CMakeLists.txt  texture_compress.cpp
src/: compare_ppm.cpp  compress.cpp  compress.hpp
stud_cl_etc/: CMakeLists.txt  compress.cl  helper.cpp  helper.hpp  texture_compress_skl.cpp
utils/: convert  score.py
